syntax = "proto3";
package grpcDataService;

message LychrelRequest {
  int64 number = 1;
}

message LychrelResponse {
  bool is_lychrel = 1;
}

message DataStoreInput {
  int32 input_value = 1;
}

message DataStoreOutput {
  bool output_value = 1;
}

service LychrelComputationService {
  rpc CheckLychrelNumber(LychrelRequest) returns (LychrelResponse);
}

service DataStoreService {
  rpc appendData(DataStoreInput) returns (DataStoreOutput);
}
